--- a/css/style.css
+++ b/css/style.css
@@ -2366,7 +2366,7 @@ a.read:after {
     text-align: center;
     cursor: pointer;
     box-shadow:0 0 4px #DEDEDE;
-    background-color: #f8d6d6;
+    background-color: #d9dff3;
     border-radius: 4px;
 }
 
